modernize(java25): finish non-wired modernization tail — instanceof, toList, records
Completes the Java 25 idiom migration for the whole non-wired codebase
(wired subsystem intentionally left frozen).

- Pattern matching for instanceof: 10 remaining test-then-cast sites
  (RoomSpecialTypes x8 game scoreboards/gates, FreezeHandleSnowballExplosion,
  UseRandomStateItemEvent). Non-wired test-then-cast count now 0.
- Stream.toList(): 3 remaining Collectors.toList() sites
  (ModToolRequestIssueChatlogEvent x2, TraxManager.myList) — every caller
  verified read-only before converting. Non-wired count now 0.
- Records (batch 8 tail, non-wired): CatalogPurchaseLogEntry (no getters,
  only constructed) and UserCustomizationData (public-final fields ->
  component accessors with a 5-caller sweep; compact constructor preserves
  the null/displayOrder normalization). The two remaining record candidates
  (WiredHighscoreDataEntry, WiredHighscoreRow) are wired and stay frozen.

Build + full unit suite green on JDK 25 (414 tests, 0 failures). No wired
files touched.